# nebula

./: .env  .env.example  .flaskenv  .gitattributes  .gitignore  README.md  README.ru.md  app.py  config.py  eslint.config.js  package.json  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  translations.py  utils.py
.github/workflows/: ci.yml
docs/: deploy.md  deploy.ru.md
infra/db/: init.sql
instance/: chat.db
scripts/: add_new_features.py  add_profile_fields.py  clean.bat  cleanup_old_messages.py  generate_secret_key.py  init_migrations.py  migrate_db.py  migrations_init.py  start.bat
src/: app.py  config.py  db.py  path_setup.py  run.py  wsgi.py
src/handlers/: __init__.py  socket_handlers.py  socket_messages.py  socket_presence.py  socket_runtime.py
src/repositories/: __init__.py  extra_features.py  messages.py  moderation.py  rooms.py  users.py
src/routes/: ai_api.py  api_tools.py  auth_api.py  chat_api.py  moderation_api.py  system_api.py
src/schemas/: __init__.py  ai.py  auth.py  chat.py
src/services/: ai_editor.py  scheduled_worker.py
src/utils/: auth_helpers.py  auth_token_store.py  http_parse.py  json_helpers.py  media.py  message_payload.py  pydantic_validation.py  roles.py  room_access.py  room_access_db.py  room_delivery.py  sanitizers.py  time_format.py  validators.py
static/: index.html  site.webmanifest
static/css/: _primitives.css  _tokens.css  (+24 more)
templates/: base.html  create_chat.html  create_group.html  index.html  login.html  profile.html  register.html
tests/: test_basic.py  test_cleanup.py
(+43 files in other folders)
