[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nebula-messenger"
description = "Web messenger Nebula"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "Flask==3.1.3",
    "Flask-SocketIO==5.6.1",
    "Flask-Cors==6.0.0",
    "Flask-Limiter==3.5.0",
    "Flask-Compress==1.14",
    "Werkzeug==3.1.6",
    "simple-websocket==1.0.0",
    "mysql-connector-python==9.2.0",
    "python-dotenv==1.0.0",
    "redis==5.0.1",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.4",
    "mypy==1.14.1",
]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Long SQL strings and user-facing messages exceed 88 cols.
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
explicit_package_bases = true
mypy_path = "src"
files = ["src"]
